fix: Bug with changing categories and loading products. Category name was saved to firestore instead of id. Stop shop page from applying sale twice. feat: Abrupt too long titles and subtitles on product cards. Remove Tiny branding. URL regex now supports uppercase characters

--- a/client/apps/shop/src/app/shared/components/product-card/product-card.component.scss
+++ b/client/apps/shop/src/app/shared/components/product-card/product-card.component.scss
@@ -63,3 +63,19 @@
     font-weight: bold;
   }
 }
+
+::ng-deep .mat-card-header-text,
+.mat-card-title,
+.mat-card-subtitle {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ribbon-header {
+  max-width: calc(100% - 32px);
+}
+
+::ng-deep .tooltip {
+  font-size: 15px;
+}
